Added migration configurations.

--- a/RestaurantOrderApp.API/appsettings.json
+++ b/RestaurantOrderApp.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "User ID=postgres;Password=mysecretpassword;Host=localhost;Port=5432;Database=restaurant_order;"
+  }
 }
