--- a/RestaurantOrderApp.Application/RestaurantOrderApp.Application.csproj
+++ b/RestaurantOrderApp.Application/RestaurantOrderApp.Application.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RestaurantOrderApp.Domain\RestaurantOrderApp.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
