Added FrontendAddress to docker-compose file.

--- a/RestaurantOrderApp.API/appsettings.json
+++ b/RestaurantOrderApp.API/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "User ID=postgres;Password=mysecretpassword;Host=localhost;Port=5432;Database=restaurant_order;"
-  }
+  },
+  "FrontendAddress": "http://localhost:3000"
 }
